move hosts.txt; do distclean in apps/jetty
Monotone-Parent: 9d47bf21cdb963c478c3e1d9f5aa368855912932
Monotone-Revision: 42df05f70681293f490a62d92dbd13226695f942

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-08T01:20:13

--- a/build.xml
+++ b/build.xml
@@ -205,6 +205,7 @@
         <ant dir="apps/susidns/src/" target="distclean" />
         <ant dir="apps/systray/java/" target="distclean" />
         <ant dir="apps/i2psnark/java/" target="distclean" />
+        <ant dir="apps/jetty/" target="distclean" />
         <delete>
             <fileset dir="." includes="**/*.class" />
             <fileset dir="." includes="**/*.java~" />
@@ -285,7 +286,7 @@
         <copy todir="pkg-temp/lib/wrapper/win32/">
             <fileset dir="installer/lib/wrapper/win32/" />
         </copy>
-        <copy file="hosts.txt" todir="pkg-temp/" />
+        <copy file="installer/resources/hosts.txt" todir="pkg-temp/" />
         <copy file="INSTALL-headless.txt" todir="pkg-temp/" />
         <!-- overwrite the truncated history put in by the updater -->
         <copy file="history.txt" todir="pkg-temp/" overwrite="true" />
