translation support and initial tagging
Monotone-Parent: 07eea220ede941f3e618282415340d6cd34a3bb1
Monotone-Revision: 807a9ce7f5eb12cf45d511ba4905d1b042b5e173

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-12-09T20:54:10

--- a/apps/i2psnark/java/build.xml
+++ b/apps/i2psnark/java/build.xml
@@ -36,7 +36,7 @@
             <compilerarg line="${javac.compilerargs}" />
         </javac>
     </target>
-    <target name="jar" depends="builddep, compile">
+    <target name="jar" depends="builddep, compile, bundle">
         <jar destfile="./build/i2psnark.jar" basedir="./build/obj" includes="**/*.class" excludes="**/I2PSnarkServlet*.class">
             <manifest>
                 <attribute name="Main-Class" value="org.klomp.snark.Snark" />
@@ -57,6 +57,38 @@
         </war>
     </target>
     
+    <target name="bundle" depends="compile">
+        <!-- Update the messages_*.po files.
+             We need to supply the bat file for windows, and then change the fail property to true -->
+        <exec executable="sh" osfamily="unix" failifexecutionfails="false" >
+            <arg value="./bundle-messages.sh" />
+        </exec>
+        <exec executable="sh" osfamily="mac" failifexecutionfails="false" >
+            <arg value="./bundle-messages.sh" />
+        </exec>
+        <exec executable="cmd" osfamily="windows" failifexecutionfails="false" >
+            <arg value="/c" />
+            <arg value="bundle-messages.bat" />
+        </exec>
+    </target>
+
+    <target name="poupdate" depends="compile">
+        <!-- Update the messages_*.po files.  -->
+        <exec executable="sh" osfamily="unix" failifexecutionfails="true" >
+            <arg value="./bundle-messages.sh" />
+            <arg value="-p" />
+        </exec>
+        <exec executable="sh" osfamily="mac" failifexecutionfails="true" >
+            <arg value="./bundle-messages.sh" />
+            <arg value="-p" />
+        </exec>
+        <exec executable="cmd" osfamily="windows" failifexecutionfails="true" >
+            <arg value="/c" />
+            <arg value="bundle-messages.bat" />
+            <arg value="-p" />
+        </exec>
+    </target>
+
     <target name="standalone" depends="standalone_prep">
         <zip destfile="i2psnark-standalone.zip">
           <zipfileset dir="./dist/" prefix="i2psnark/" />
