--- a/build.xml
+++ b/build.xml
@@ -141,6 +141,7 @@
     </target>
     <target name="poupdate">
         <ant dir="apps/routerconsole/java/" target="poupdate" />
+        <ant dir="apps/i2psnark/java/" target="poupdate" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
