--- a/build.xml
+++ b/build.xml
@@ -142,6 +142,7 @@
     <target name="poupdate">
         <ant dir="apps/routerconsole/java/" target="poupdate" />
         <ant dir="apps/i2psnark/java/" target="poupdate" />
+        <ant dir="apps/i2ptunnel/java/" target="poupdate" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
