--- a/build.xml
+++ b/build.xml
@@ -143,6 +143,7 @@
         <ant dir="apps/routerconsole/java/" target="poupdate" />
         <ant dir="apps/i2psnark/java/" target="poupdate" />
         <ant dir="apps/i2ptunnel/java/" target="poupdate" />
+        <ant dir="apps/susidns/src/" target="poupdate" />
     </target>
     <target name="javadoc">
         <mkdir dir="./build" />
