Added a target to generate a stand-alone BOB jar file.
Monotone-Parent: a40037ecb08148d44e1d05467e2893880ba171a8
Monotone-Revision: a867e3e7198753ff6db6fbe2ccaf7f2b8d839de8

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-01T21:28:28
Monotone-Branch: i2p.i2p

--- a/apps/BOB/build.xml
+++ b/apps/BOB/build.xml
@@ -71,4 +71,19 @@
     nbproject/build-impl.xml file. 
 
     -->
+    <target depends="init,compile,-pre-jar,-do-jar-with-manifest,-do-jar-without-manifest,-do-jar-with-mainclass,-do-jar-with-libraries,-do-jar-with-libraries-without-mainclass,-do-jar-with-libraries-without-manifest,-post-jar" description="Build BOB into a SINGLE JAR." name="onejar">
+        <jar jarfile="dist/BOB-one.jar">
+            <zipfileset src="${dist.jar}" excludes="META-INF/*" />
+            <zipfileset src="dist/lib/i2p.jar" excludes="META-INF/*"/>
+            <zipfileset src="dist/lib/i2ptunnel.jar" excludes="META-INF/*"/>
+            <zipfileset src="dist/lib/mstreaming.jar" excludes="META-INF/*"/>
+            <zipfileset src="dist/lib/router.jar" excludes="META-INF/*"/>
+            <zipfileset src="dist/lib/streaming.jar" excludes="META-INF/*"/>
+            <zipfileset src="dist/lib/wrapper.jar" excludes="META-INF/*"/>
+            <zipfileset src="../../installer/lib/jbigi/jbigi.jar" excludes="META-INF/*"/>
+            <manifest>
+                <attribute name="Main-Class" value="net.i2p.BOB.Main"/>
+            </manifest>
+        </jar>
+    </target>
 </project>
