Fix NB 6.8 goofyness... 'till ant 1.7.1 or > is needed, stay with NB 6.5, as the newer ones place a check for 1.7.1. We require 1.7.0
Monotone-Parent: 4bcfc7b30a82841bfc199916509fec7e13f21247
Monotone-Revision: 4259744a4e2a56c50c62c34ecc3340120b48a427

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-02T14:59:50
Monotone-Branch: i2p.i2p

--- a/apps/BOB/nbproject/private/private.properties
+++ b/apps/BOB/nbproject/private/private.properties
@@ -4,4 +4,5 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 jaxbwiz.endorsed.dirs=/usr/local/netbeans-6.8/ide12/modules/ext/jaxb/api
-user.properties.file=/root/.netbeans/6.8/build.properties
+jaxws.endorsed.dir=/usr/local/netbeans-6.5/java2/modules/ext/jaxws21/api:/usr/local/netbeans-6.5/ide10/modules/ext/jaxb/api
+user.properties.file=/root/.netbeans/6.5/build.properties
