Fix one last stupid mistake in build.xml, my fault.
Monotone-Parent: 5896779cfea73a131e624e6d065d2caa206f8c48
Monotone-Revision: 7f8a9c3df704231f6d9b9b36222d296d1d02f9aa

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-01-02T22:58:50
Monotone-Branch: i2p.i2p

--- a/apps/BOB/build.xml
+++ b/apps/BOB/build.xml
@@ -71,7 +71,7 @@
     nbproject/build-impl.xml file. 
 
     -->
-    <target depends="init,compile,-pre-jar,-do-jar-with-manifest,-do-jar-without-manifest,-do-jar-with-mainclass,-do-jar-with-libraries,-do-jar-with-libraries-without-mainclass,-do-jar-with-libraries-without-manifest,-post-jar" description="Build BOB into a SINGLE JAR." name="onejar">
+    <target depends="jar" description="Build BOB into a SINGLE JAR." name="onejar">
 	<!-- Make needed working dirs -->
 	<mkdir dir="${dist.dir}/lib" />
 	<mkdir dir="${dist.dir}/classes" />
