tweaks; include new translated eepsite pages in pkg; -18-rc
Monotone-Parent: 4526c793eb8c3322ddf112781f8403ab3ee7d5bd
Monotone-Revision: 8dfddbd5818309c8db9434a91b4cfdbb1b79189b

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-09T14:26:01
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -362,6 +362,8 @@
         <mkdir dir="pkg-temp/eepsite/cgi-bin" />
         <copy file="installer/resources/eepsite_index.html" tofile="pkg-temp/eepsite/docroot/index.html" />
         <copy file="installer/resources/eepsite_index_de.html" tofile="pkg-temp/eepsite/docroot/index_de.html" />
+        <copy file="installer/resources/eepsite_index_fr.html" tofile="pkg-temp/eepsite/docroot/index_fr.html" />
+        <copy file="installer/resources/eepsite_index_ru.html" tofile="pkg-temp/eepsite/docroot/index_ru.html" />
         <copy file="installer/resources/eepsite.css" todir="pkg-temp/eepsite/docroot/" />
         <copy file="installer/resources/robots.txt" todir="pkg-temp/eepsite/docroot/" />
         <copy file="installer/resources/themes/console/images/favicon.ico" tofile="pkg-temp/eepsite/docroot/favicon.ico" />
