--- a/build.xml
+++ b/build.xml
@@ -355,17 +355,30 @@
         <copy todir="pkg-temp/docs/themes/" >
           <fileset dir="installer/resources/themes/" />
         </copy>
+        <!-- Eepsite stuff here -->
         <mkdir dir="pkg-temp/eepsite" />
         <mkdir dir="pkg-temp/eepsite/webapps" />
         <mkdir dir="pkg-temp/eepsite/logs" />
         <mkdir dir="pkg-temp/eepsite/docroot" />
         <mkdir dir="pkg-temp/eepsite/cgi-bin" />
-        <copy file="installer/resources/eepsite_index.html" tofile="pkg-temp/eepsite/docroot/index.html" />
-        <copy file="installer/resources/eepsite_index_de.html" tofile="pkg-temp/eepsite/docroot/index_de.html" />
-        <copy file="installer/resources/eepsite_index_fr.html" tofile="pkg-temp/eepsite/docroot/index_fr.html" />
-        <copy file="installer/resources/eepsite_index_ru.html" tofile="pkg-temp/eepsite/docroot/index_ru.html" />
-        <copy file="installer/resources/eepsite.css" todir="pkg-temp/eepsite/docroot/" />
-        <copy file="installer/resources/robots.txt" todir="pkg-temp/eepsite/docroot/" />
+        <mkdir dir="pkg-temp/eepsite/docroot/help" />
+        <mkdir dir="pkg-temp/eepsite/docroot/help/lib" />
+        <copy todir="pkg-temp/eepsite/docroot/help/" >
+            <fileset dir="installer/resources/eepsite.help/" />
+        </copy>
+        <copy todir="pkg-temp/eepsite/docroot/help/lib/" >
+            <fileset dir="installer/resources/eepsite.help/help/lib/" />
+        </copy>  
+        <copy file="installer/resources/eepsite.help/index.html" tofile="pkg-temp/eepsite/docroot/" />
+<!-- Let's see if we can lose this chunk -->
+<!--    <copy file="installer/resources/eepsite.help/help/index.html" tofile="pkg-temp/eepsite/docroot/help/" /> -->
+<!--    <copy file="installer/resources/eepsite.help/help/index_de.html" tofile="pkg-temp/eepsite/docroot/help/" /> -->
+<!--    <copy file="installer/resources/eepsite.help/help/index_fr.html" tofile="pkg-temp/eepsite/docroot/help/" /> -->
+<!--    <copy file="installer/resources/eepsite.help/help/index_de.html" tofile="pkg-temp/eepsite/docroot/help/" /> -->
+<!--    <copy file="installer/resources/eepsite.help/help/index_ru.html" tofile="pkg-temp/eepsite/docroot/help/" /> -->
+<!--    <copy file="installer/resources/eepsite.help/help/lib/eepsite.css" todir="pkg-temp/eepsite/docroot/help/lib/" /> -->
+
+        <copy file="installer/resources/eepsite.help/robots.txt" todir="pkg-temp/eepsite/docroot/" />
         <copy file="installer/resources/themes/console/images/favicon.ico" tofile="pkg-temp/eepsite/docroot/favicon.ico" />
         <copy file="installer/resources/jetty.xml" tofile="pkg-temp/eepsite/jetty.xml" />
     </target>
