* eepget.bat: Add to pkg
Monotone-Parent: efdeefc134243f15d893f98dcbe275657fcc807a
Monotone-Revision: ef223e4bb0c516b622e124f01833e0084a687520

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-01-21T14:17:10
Monotone-Branch: i2p.i2p

--- a/build.xml
+++ b/build.xml
@@ -301,6 +301,7 @@
         <copy file="installer/resources/blocklist.txt" todir="pkg-temp/" />
         <copy file="installer/resources/clients.config" todir="pkg-temp/" />
         <copy file="installer/resources/eepget" todir="pkg-temp/" />
+        <copy file="installer/resources/eepget.bat" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter" todir="pkg-temp/" />
         <copy file="installer/resources/i2prouter.bat" todir="pkg-temp/" />
         <copy file="installer/resources/fixperms.bat" todir="pkg-temp/" />
