--- a/build.xml
+++ b/build.xml
@@ -649,7 +649,7 @@
     <target name="release" depends="pkg">
         <echo message="================================================================" />
         <echo message="Did you update these files?" />
-        <exec executable="ls">
+        <exec executable="ls" failonerror="true">
             <arg value="-l" />
             <arg value="history.txt" />
             <arg value="installer/resources/initialNews.xml" />
@@ -659,15 +659,19 @@
 	    <arg value="router/java/src/net/i2p/router/RouterVersion.java" />
         </exec>
         <echo message="Everything is checked in, right? Let's be sure:" />
-        <exec executable="mtn">
+        <exec executable="mtn" failonerror="true">
             <arg value="st" />
         </exec>
-        <input message="Enter new version number:" addproperty="release.number" />
-        <fail message="You must enter a version number." >
-            <condition>
-                <equals arg1="${release.number}" arg2=""/>
-            </condition>
-        </fail>
+        <echo message="If there are any modified files above, stop now!" />
+        <!-- get release version number -->
+        <exec executable="grep" outputproperty="versionLine" failonerror="true" >
+            <arg value="public final static String VERSION" />
+	    <arg value="core/java/src/net/i2p/CoreVersion.java" />
+        </exec>
+        <exec executable="cut" inputstring="${versionLine}" outputproperty="release.number" failonerror="true" >
+            <arg value="-f2" />
+	    <arg value="-d&quot;" />
+        </exec>
         <echo message="New version number is ${release.number}" />
         <copy file="i2pupdate.zip" tofile="i2pupdate_${release.number}.zip" />
         <copy file="i2pinstall.exe" tofile="i2pinstall_${release.number}.exe" />
@@ -712,13 +716,16 @@
         <!-- will this use the monotonerc file in the current workspace? -->
         <echo message="Checking out fresh copy into ../i2p-${release-number} for tarballing:" />
         <delete dir="../i2p-${release.number}" />
-        <exec executable="mtn">
+        <exec executable="mtn" failonerror="true">
             <arg value="co" />
             <arg value="-b" />
             <arg value="i2p.i2p" />
+            <!-- w: is the revision of the current workspace -->
+            <arg value="-r" />
+            <arg value="w:" />
             <arg value="../i2p-${release.number}/" />
         </exec>
-        <exec executable="tar">
+        <exec executable="tar" failonerror="true">
             <arg value="cjf" />
             <arg value="i2psource_${release.number}.tar.bz2" />
             <arg value="-C" />
@@ -731,20 +738,20 @@
         <delete file="i2pinstall_${release.number}.exe.sig" />
         <delete file="i2psource_${release.number}.tar.bz2.sig" />
         <delete file="i2pupdate_${release.number}.zip.sig" />
-        <exec executable="gpg">
+        <exec executable="gpg" failonerror="true">
             <arg value="-b" />
             <arg value="i2pinstall_${release.number}.exe" />
         </exec>
-        <exec executable="gpg">
+        <exec executable="gpg" failonerror="true">
             <arg value="-b" />
             <arg value="i2psource_${release.number}.tar.bz2" />
         </exec>
-        <exec executable="gpg">
+        <exec executable="gpg" failonerror="true">
             <arg value="-b" />
             <arg value="i2pupdate_${release.number}.zip" />
         </exec>
         <echo message="File sizes:" />
-        <exec executable="ls">
+        <exec executable="ls" failonerror="true">
             <arg value="-l" />
             <arg value="i2pinstall_${release.number}.exe" />
             <arg value="i2psource_${release.number}.tar.bz2" />
@@ -755,12 +762,13 @@
             <arg value="i2pupdate_${release.number}.zip.sig" />
         </exec>
         <echo message="SHA256 sums:" />
-        <exec executable="sha256sum">
+        <exec executable="sha256sum" failonerror="true">
             <arg value="i2pinstall_${release.number}.exe" />
             <arg value="i2psource_${release.number}.tar.bz2" />
             <arg value="i2pupdate_${release.number}.zip" />
             <arg value="i2pupdate.sud" />
         </exec>
-        <echo message="Don't forget to mtn tag h: i2p-${release-number}" />
+        <echo message="Don't forget to mtn tag h: i2p-${release.number}" />
+        <echo message="... and mtn cert t:i2p-${release.number} branch i2p.i2p.release" />
     </target>
 </project>
